fix: partial dark mode matching

--- a/src/design/ele/card.scss
+++ b/src/design/ele/card.scss
@@ -39,6 +39,6 @@ html[data-theme='dark'] {
   .#{$elenamex} {
     --el-text-color-primary: var(--text-primary-color);
     --el-card-bg-color: var(--background-primary-color);
-    --el-card-border-color: var(--border-color)
+    --el-card-border-color: var(--border-color);
   }
 }
