--- a/src/design/ele/descriptions.scss
+++ b/src/design/ele/descriptions.scss
@@ -5,3 +5,12 @@ $elenamex: 'el-descriptions';
     background: none;
   }
 }
+
+html[data-theme='dark'] {
+  .#{$elenamex} {
+    --el-descriptions-table-border: 1px solid var(--border-color);
+    --el-descriptions-item-bordered-label-background: var(--background-secondary-color);
+    --el-text-color-regular: var(--text-secondary-color);
+    --el-text-color-primary: var(--text-primary-color);
+  }
+}
